--- a/style.css
+++ b/style.css
@@ -299,7 +299,8 @@ html{
 }
 
 .second-background iframe {
-    width: 130rem;
+    width: 120rem;
+    height: 50rem;
 }
 
 .gallery{
@@ -416,12 +417,7 @@ html{
 
 
 
-
-
-
-
-
-@media (max-width:768px) {
+@media (max-width:600px) {
     html{
         font-size: 50%;
     }
@@ -469,4 +465,10 @@ html{
         margin: 45rem 5rem;
         border-radius: 30px;
     }
+
+    .second-background iframe {
+        width: 50rem;
+        height: 30rem;
+    }
+    
 }
